--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,7 @@ button {
 
 .container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   text-align: center;
   min-width: 350px;
   max-width: 411px;
