--- a/css/styles.css
+++ b/css/styles.css
@@ -67,17 +67,18 @@ button {
   text-align: center;
   min-width: 350px;
   max-width: 411px;
-  padding: 100px 10px;
+  padding: 80px 10px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
   color: black;
-  line-height: 1.6;
   max-width: 411px;
   margin: 0 auto;
+
+  background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+  background-attachment: fixed;
+  background-size: cover;
+  color: #ffffff;
 }
 
 header,
@@ -86,7 +87,5 @@ section {
 }
 
 header {
-  background-color: transparent;
-  text-align: center;
   padding: 32px 16px;
 }
