--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,8 @@ p:last-child {
 }
 
 ul,
-ol {
+ol,
+body {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -75,17 +76,51 @@ body {
   max-width: 411px;
   margin: 0 auto;
 
-  background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+  background: linear-gradient(
+    -225deg,
+    rgba(76, 76, 76, 1) 0%,
+    rgba(89, 89, 89, 1) 12%,
+    rgba(102, 102, 102, 1) 25%,
+    rgba(71, 71, 71, 1) 36%,
+    rgba(44, 44, 44, 1) 43.5%,
+    rgba(17, 17, 17, 1) 58%,
+    rgba(43, 43, 43, 1) 73.75%,
+    rgba(0, 0, 0, 1) 82.25%,
+    rgba(28, 28, 28, 1) 91%,
+    rgba(19, 19, 19, 1) 100%
+  );
   background-attachment: fixed;
   background-size: cover;
   color: #ffffff;
 }
 
-header,
-section {
-  padding: 16px;
+.auth-buttons,
+.menu {
+  display: none;
 }
 
-header {
-  padding: 32px 16px;
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-header {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  justify-content: space-between;
+}
+
+.main-logo-text {
+  margin-left: 25px;
+}
+
+.container-section-one,
+.container-section-two,
+.container-section-three,
+.container-section-four,
+.container-section-fouter,
+.container-section-five {
+  display: flex;
+  flex-direction: column;
 }
