--- a/css/styles.css
+++ b/css/styles.css
@@ -206,3 +206,12 @@ body {
   flex-direction: row;
   gap: 20px;
 }
+/* section-header Секція хедер */
+/* main-foto Секція головного фото */
+/* section-one Секція один */
+/* section-two Секція два */
+/* section-three - Секція три */
+/* section-four Секція чотири */
+/* section-five Секція пять */
+/* section-designer Секція дизайнер */
+/* section-fouter Секція футер */
