--- a/css/styles.css
+++ b/css/styles.css
@@ -239,3 +239,34 @@ body {
 /* section-five Секція пять */
 /* section-designer Секція дизайнер */
 /* section-fouter Секція футер */
+
+/* Стрілки для прокручування */
+
+.scroll-buttons {
+  position: fixed;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  z-index: 1000;
+}
+
+.scroll-btn {
+  background-color: transparent;
+  color: #1e8499;
+  border: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.scroll-btn:hover {
+  background-color: transparent;
+}
