--- a/css/styles.css
+++ b/css/styles.css
@@ -82,30 +82,15 @@ body {
   margin: 0 auto;
   font-family: "Open Sans", sans-serif;
 
-  background: rgba(240, 249, 255, 1); /* однотонний як запасний варіант */
-  background: linear-gradient(
-    90deg,
-    rgba(240, 249, 255, 1) 0%,
-    rgba(203, 235, 255, 1) 55%,
-    rgba(161, 219, 255, 1) 96%
-  );
-
-  /* background: linear-gradient(
-    -225deg,
-    rgba(76, 76, 76, 1) 0%,
-    rgba(89, 89, 89, 1) 12%,
-    rgba(102, 102, 102, 1) 25%,
-    rgba(71, 71, 71, 1) 36%,
-    rgba(44, 44, 44, 1) 43.5%,
-    rgba(17, 17, 17, 1) 58%,
-    rgba(43, 43, 43, 1) 73.75%,
-    rgba(0, 0, 0, 1) 82.25%,
-    rgba(28, 28, 28, 1) 91%,
-    rgba(19, 19, 19, 1) 100%
-  ); */
+  background: rgba(240, 249, 255, 1); 
   background-attachment: fixed;
   background-size: cover;
   /* color: #ffffff; */
+      text-shadow: 
+    -1px -1px 0 lightblue,  /* світло-синя рамка зліва вгорі */
+    1px -1px 0 lightblue,   /* світло-синя рамка справа вгорі */
+    -1px 1px 0 lightblue,   /* світло-синя рамка зліва внизу */
+    1px 1px 0 lightblue;    /* світло-синя рамка справа внизу */
 }
 
 .auth-buttons,
@@ -244,6 +229,15 @@ body {
   padding-bottom: 0;
 }
 /* section-three - Секція три */
+
+.container-section-three {
+    text-shadow: 
+    -1px -1px 0 lightblue,  /* світло-синя рамка зліва вгорі */
+    1px -1px 0 lightblue,   /* світло-синя рамка справа вгорі */
+    -1px 1px 0 lightblue,   /* світло-синя рамка зліва внизу */
+    1px 1px 0 lightblue;    /* світло-синя рамка справа внизу */
+}
+}
 .container-section-three-ul {
   display: flex;
   flex-direction: column;
