--- a/css/styles.css
+++ b/css/styles.css
@@ -82,15 +82,14 @@ body {
   margin: 0 auto;
   font-family: "Open Sans", sans-serif;
 
-  background: rgba(240, 249, 255, 1); 
+  background: rgba(240, 249, 255, 1);
   background-attachment: fixed;
   background-size: cover;
   /* color: #ffffff; */
-      text-shadow: 
-    -1px -1px 0 lightblue,  /* світло-синя рамка зліва вгорі */
-    1px -1px 0 lightblue,   /* світло-синя рамка справа вгорі */
-    -1px 1px 0 lightblue,   /* світло-синя рамка зліва внизу */
-    1px 1px 0 lightblue;    /* світло-синя рамка справа внизу */
+  text-shadow: -1px -1px 0 lightblue,
+    /* світло-синя рамка зліва вгорі */ 1px -1px 0 lightblue,
+    /* світло-синя рамка справа вгорі */ -1px 1px 0 lightblue,
+    /* світло-синя рамка зліва внизу */ 1px 1px 0 lightblue; /* світло-синя рамка справа внизу */
 }
 
 .auth-buttons,
@@ -231,13 +230,12 @@ body {
 /* section-three - Секція три */
 
 .container-section-three {
-    text-shadow: 
-    -1px -1px 0 lightblue,  /* світло-синя рамка зліва вгорі */
-    1px -1px 0 lightblue,   /* світло-синя рамка справа вгорі */
-    -1px 1px 0 lightblue,   /* світло-синя рамка зліва внизу */
-    1px 1px 0 lightblue;    /* світло-синя рамка справа внизу */
+  text-shadow: -1px -1px 0 lightblue,
+    /* світло-синя рамка зліва вгорі */ 1px -1px 0 lightblue,
+    /* світло-синя рамка справа вгорі */ -1px 1px 0 lightblue,
+    /* світло-синя рамка зліва внизу */ 1px 1px 0 lightblue; /* світло-синя рамка справа внизу */
 }
-}
+
 .container-section-three-ul {
   display: flex;
   flex-direction: column;
