--- a/css/styles.css
+++ b/css/styles.css
@@ -292,12 +292,8 @@ body {
 
 /* section-four Секція чотири */
 
-.container-section-four-figma {
-  font-size: 25px;
-}
-
-.maket-figma {
-  font-size: 25px;
+.container-section-four-figma-www {
+  color: #1e8499;
 }
 
 .project-list,
