--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,8 @@ body {
 
 .four-section-image-container {
   margin-bottom: 8px;
+  border: 2px solid #9a22a3;
+  border-radius: 12px;
 }
 
 .container-section-four-p {
