--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ body {
 
 .four-section-image-container {
   margin-bottom: 8px;
-  border: 2px solid #9a22a3;
+  border: 2px solid #904596;
   border-radius: 12px;
 }
 
