--- a/css/styles.css
+++ b/css/styles.css
@@ -320,7 +320,7 @@ body {
 }
 
 .container-section-four-figma-www {
-  color: #1e8499;
+  color: #ab65b3;
 }
 
 .project-list,
@@ -365,7 +365,7 @@ body {
 
 .scroll-btn {
   background-color: transparent;
-  color: #1e8499;
+  color: #bd1cad;
   border: none;
   border-radius: 50%;
   width: 20px;
