--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,11 @@ body {
 }
 
 /* section-designer Секція дизайнер */
+.container-section-designer {
+  background: rgba(251, 131, 250, 1);
+  border-radius: 12px;
+}
+
 /* section-fouter Секція футер */
 
 .social-icons-two {
