--- a/css/styles.css
+++ b/css/styles.css
@@ -403,12 +403,11 @@ body {
   display: none; /* ховаємо кнопку спочатку */
   padding: 10px 15px;
   font-size: 1.5rem;
-  background-color: #993e90;
+  background: linear-gradient(135deg, #993e90, #ab65b3);
   color: #f2f2f2;
   border: none;
   border-radius: 50%;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
+  /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); */
   transition: opacity 0.3s ease;
 }
 
