--- a/css/styles.css
+++ b/css/styles.css
@@ -411,16 +411,16 @@ section {
   transform: translateX(0px);
 }
 .container-section-three-ul .container-section-three-li:nth-child(2) {
-  transform: translateX(35px);
+  transform: translateX(25px);
 }
 .container-section-three-ul .container-section-three-li:nth-child(3) {
-  transform: translateX(65px);
+  transform: translateX(55px);
 }
 .container-section-three-ul .container-section-three-li:nth-child(4) {
-  transform: translateX(100px);
+  transform: translateX(90px);
 }
 .container-section-three-ul .container-section-three-li:nth-child(5) {
-  transform: translateX(150px);
+  transform: translateX(120px);
 }
 
 /* Сходинки — для Інструментів */
@@ -428,10 +428,10 @@ section {
   transform: translateX(0px);
 }
 .container-section-three-ul-two .container-section-three-li:nth-child(2) {
-  transform: translateX(70px);
+  transform: translateX(20px);
 }
 .container-section-three-ul-two .container-section-three-li:nth-child(3) {
-  transform: translateX(120px);
+  transform: translateX(50px);
 }
 
 /* Додавання тире перед кожним елементом списку */
@@ -453,7 +453,7 @@ section {
   .container-section-three {
     align-items: flex-start;
     flex-direction: row;
-    gap: 220px;
+    /* gap: 220px; */
     min-width: 1004px;
     max-width: 1600px;
   }
@@ -800,6 +800,14 @@ section {
 .social-icon-footer {
   width: 36px;
   height: 36px;
+}
+
+.container-section-fouter-contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 @media screen and (min-width: 1024px) {
