--- a/css/styles.css
+++ b/css/styles.css
@@ -823,6 +823,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
     gap: 40px;
     padding-top: 70px;
     padding-bottom: 70px;
