--- a/css/styles.css
+++ b/css/styles.css
@@ -453,7 +453,7 @@ section {
   .container-section-three {
     align-items: flex-start;
     flex-direction: row;
-    /* gap: 220px; */
+    gap: 220px;
     min-width: 1004px;
     max-width: 1600px;
   }
